complete Absence Service